--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,10 +1,12 @@
 #about {
     width: 100%;
-    max-width: 140vh;
-    margin: 0 auto 2rem;
+    min-height: 100vh;
+    /* background-color: #e0c3fc; */
+    margin: 100px auto 2rem ;
     padding: 2rem;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 2rem;
     overflow: hidden;
