--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -2,7 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; 
+  /* margin-top: 50px; */
+  min-height: 80vh; 
+  /* background-color: #caa0f5; */
 }
 
 .education-section {
