--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -7,7 +7,7 @@ nav {
     padding: 40px;
     position: fixed;
     top: 0;
-    background-color: rgb(22, 25, 23);
+    /* background-color: rgb(22, 25, 23); */
     z-index: 20;
 }
 
